--- a/requirements.txt
+++ b/requirements.txt
@@ -55,9 +55,9 @@ pyfiglet==0.8.post1
 PyHamcrest==2.0.2
 pylint==2.4.4
 PyNaCl==1.3.0
-pyobjc-core==6.1
-pyobjc-framework-Cocoa==6.1
-pyobjc-framework-FSEvents==6.1
+# pyobjc-core==6.1
+# pyobjc-framework-Cocoa==6.1
+# pyobjc-framework-FSEvents==6.1
 pyOpenSSL==19.1.0
 pyparsing==2.4.6
 python-dateutil==2.8.1
